--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,55 +30,58 @@ SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 SET ( DEFAULT_USE_AVAHI_LIBS  ON )
 SET ( DEFAULT_TESTS      OFF )
 
+if ( NOT DEFINED PLATFORM )
+	if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
+		SET( PLATFORM "x86")
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" )
+		SET( PLATFORM "rpi")
+		EXEC_PROGRAM( "nproc" OUTPUT_VARIABLE SYSTEM_CPU_CORES )
+		FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
+		STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
+		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" )
+			SET( PLATFORM "wetek" )
+		elseif( SYSTEM_CPU_CORES GREATER 1 AND "${SYSTEM_CPUINFO}" MATCHES "bcm" )
+			SET( PLATFORM "rpi-pwm" )
+		endif()
+	endif()
+	if ( PLATFORM )
+		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
+	else()
+		message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|wetek|x86>")
+	endif()
+endif()
+
+if ( "${PLATFORM}" STREQUAL "rpi" )
+	SET ( DEFAULT_DISPMANX   ON )
+elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
+	SET ( DEFAULT_DISPMANX   ON )
+	SET ( DEFAULT_WS2812BPWM ON )
+	SET ( DEFAULT_WS281XPWM  ON )
+elseif ( "${PLATFORM}" STREQUAL "wetek" )
+	SET ( DEFAULT_AMLOGIC    ON )
+elseif ( "${PLATFORM}" STREQUAL "x86" )
+	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+elseif ( "${PLATFORM}" STREQUAL "x86-dev" )
+	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_AMLOGIC    ON)
+	SET ( DEFAULT_WS281XPWM  ON )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+	SET ( DEFAULT_TESTS      ON )
+elseif ( "${PLATFORM}" STREQUAL "imx6" )
+	SET ( DEFAULT_FB         ON )
+endif()
+
 if (APPLE)
-    set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
+	set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
+	include_directories("/opt/X11/include/")
 	SET ( DEFAULT_OSX    ON )
-    SET ( DEFAULT_V4L2   OFF )
+	SET ( DEFAULT_V4L2   OFF )
 	SET ( DEFAULT_SPIDEV OFF )
 	SET ( DEFAULT_FB     OFF )
-    SET ( DEFAULT_USE_AVAHI_LIBS  OFF )
-else ()
-	if ( NOT DEFINED PLATFORM )
-		if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
-			SET( PLATFORM "x86")
-		elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" )
-			SET( PLATFORM "rpi")
-			EXEC_PROGRAM( "nproc" OUTPUT_VARIABLE SYSTEM_CPU_CORES )
-			FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
-			STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
-			if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" )
-				SET( PLATFORM "wetek" )
-			elseif( SYSTEM_CPU_CORES GREATER 1 AND "${SYSTEM_CPUINFO}" MATCHES "bcm" )
-				SET( PLATFORM "rpi-pwm" )
-			endif()
-		endif()
-		if ( PLATFORM )
-			message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
-		else()
-			message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|wetek|x86>")
-		endif()
-	endif()
-
-	if ( "${PLATFORM}" STREQUAL "rpi" )
-		SET ( DEFAULT_DISPMANX   ON )
-	elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
-		SET ( DEFAULT_DISPMANX   ON )
-		SET ( DEFAULT_WS2812BPWM ON )
-		SET ( DEFAULT_WS281XPWM  ON )
-	elseif ( "${PLATFORM}" STREQUAL "wetek" )
-		SET ( DEFAULT_AMLOGIC    ON )
-	elseif ( "${PLATFORM}" STREQUAL "x86" )
-		SET ( DEFAULT_X11        ON )
-		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
-	elseif ( "${PLATFORM}" STREQUAL "x86-dev" )
-		SET ( DEFAULT_X11        ON )
-		SET ( DEFAULT_AMLOGIC    ON)
-		SET ( DEFAULT_WS281XPWM  ON )
-		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
-		SET ( DEFAULT_TESTS      ON )
-	elseif ( "${PLATFORM}" STREQUAL "imx6" )
-		SET ( DEFAULT_FB         ON )
-	endif()
+	SET ( DEFAULT_WS281XPWM  OFF )
+	SET ( DEFAULT_USE_AVAHI_LIBS  OFF )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 endif ()
 
 # set the build options
@@ -124,10 +127,6 @@ message(STATUS "ENABLE_PROFILER = " ${ENABLE_PROFILER})
 SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/proto )
 SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
 
-#if(ENABLE_QT5)
-# TODO vs ENABLE_QT4?
-#endif(ENABLE_QT5)
-
 # Createt the configuration file
 
 # Add project specific cmake modules (find, etc)
@@ -156,8 +155,18 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 #set(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so")
 
 # enable C++11
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++11 -Wall")
+include(CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+if(COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif(COMPILER_SUPPORTS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+else()
+    message(STATUS "No support for C++11 detected. Compilation will most likely fail on your compiler")
+endif()
 
 SET(QT_MIN_VERSION "5.2.0")
 find_package(Qt5 COMPONENTS Core Gui Network REQUIRED)
