fix amlogic for newer kernels crosscompile stay on 32bit aml with kernel 3.10

--- a/libsrc/grabber/amlogic/CMakeLists.txt
+++ b/libsrc/grabber/amlogic/CMakeLists.txt
@@ -1,3 +1,4 @@
+INCLUDE (CheckIncludeFiles)
 
 # Define the current source locations
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
@@ -17,6 +18,12 @@ SET(AmlogicSOURCES
 
 QT5_WRAP_CPP(AmlogicHEADERS_MOC ${AmlogicQT_HEADERS})
 
+CHECK_INCLUDE_FILES ("amcodec/amports/amstream.h" HAVE_AML_HEADER)
+IF (${HAVE_AML_HEADER})
+	ADD_DEFINITIONS( -DHAVE_AML_HEADER )
+ENDIF()
+
+
 add_library(amlogic-grabber
 	${AmlogicHEADERS}
 	${AmlogicQT_HEADERS}
@@ -27,3 +34,4 @@ add_library(amlogic-grabber
 target_link_libraries(amlogic-grabber
 	hyperion
 	${QT_LIBRARIES})
+	
