add new platform amlogic64. This is used e.g. for new wetek boxes hub and play2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_V4L2       ON  )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 SET ( DEFAULT_USE_AVAHI_LIBS  ON )
+SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
 SET ( DEFAULT_TESTS      OFF )
 
 if ( NOT DEFINED PLATFORM )
@@ -38,8 +39,10 @@ if ( NOT DEFINED PLATFORM )
 		EXEC_PROGRAM( "nproc" OUTPUT_VARIABLE SYSTEM_CPU_CORES )
 		FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
 		STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
-		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" )
-			SET( PLATFORM "wetek" )
+		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
+			SET( PLATFORM "amlogic" )
+		elseif ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
+			SET( PLATFORM "amlogic64" )
 		elseif( SYSTEM_CPU_CORES GREATER 1 AND "${SYSTEM_CPUINFO}" MATCHES "bcm" )
 			SET( PLATFORM "rpi-pwm" )
 		endif()
@@ -47,7 +50,7 @@ if ( NOT DEFINED PLATFORM )
 	if ( PLATFORM )
 		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
 	else()
-		message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|wetek|x86>")
+		message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|amlogic|amlogic64|x86>")
 	endif()
 endif()
 
@@ -57,8 +60,11 @@ elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
 	SET ( DEFAULT_DISPMANX   ON )
 	SET ( DEFAULT_WS2812BPWM ON )
 	SET ( DEFAULT_WS281XPWM  ON )
-elseif ( "${PLATFORM}" STREQUAL "wetek" )
+elseif ( "${PLATFORM}" STREQUAL "wetek" OR  "${PLATFORM}" STREQUAL "amlogic" )
 	SET ( DEFAULT_AMLOGIC    ON )
+elseif ( "${PLATFORM}" STREQUAL "amlogic64" )
+	SET ( DEFAULT_AMLOGIC    ON )
+	SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS ON )
 elseif ( "${PLATFORM}" STREQUAL "x86" )
 	SET ( DEFAULT_X11        ON )
 	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
