implement component state

--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(Hyperion_QT_HEADERS
 
 	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.h
 	${CURRENT_HEADER_DIR}/GrabberWrapper.h
+	${CURRENT_HEADER_DIR}/ComponentRegister.h
 )
 
 SET(Hyperion_HEADERS
@@ -38,6 +39,7 @@ SET(Hyperion_SOURCES
 	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.cpp
 	${CURRENT_SOURCE_DIR}/MessageForwarder.cpp
 	${CURRENT_SOURCE_DIR}/GrabberWrapper.cpp
+	${CURRENT_SOURCE_DIR}/ComponentRegister.cpp
 )
 
 SET(Hyperion_RESOURCES
