make shared libs work again

--- a/src/hyperion-aml/CMakeLists.txt
+++ b/src/hyperion-aml/CMakeLists.txt
@@ -30,7 +30,8 @@ add_executable(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}
-    commandline
+	effectengine
+	commandline
 	blackborder
 	hyperion-utils
 	protoserver
