--- a/src/hyperion-v4l2/CMakeLists.txt
+++ b/src/hyperion-v4l2/CMakeLists.txt
@@ -32,8 +32,9 @@ add_executable(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}
+	effectengine
 	v4l2-grabber
-    commandline
+	commandline
 	blackborder
 	hyperion-utils
 	protoserver
