--- a/src/hyperion-dispmanx/CMakeLists.txt
+++ b/src/hyperion-dispmanx/CMakeLists.txt
@@ -31,7 +31,8 @@ add_executable( ${PROJECT_NAME}
 )
 
 target_link_libraries( ${PROJECT_NAME}
-    commandline
+	effectengine
+	commandline
 	blackborder
 	hyperion-utils
 	protoserver
