--- a/libsrc/webconfig/CMakeLists.txt
+++ b/libsrc/webconfig/CMakeLists.txt
@@ -27,14 +27,23 @@ set(WebConfig_SOURCES
 	${CURRENT_SOURCE_DIR}/StaticFileServing.cpp
 	${CURRENT_SOURCE_DIR}/WebConfig.cpp
 )
+FILE ( GLOB_RECURSE webFiles RELATIVE ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/assets/webconfig/* )
+FOREACH( f ${webFiles} )
+    STRING ( REPLACE "../assets/webconfig/" "" fname ${f})
+    SET(HYPERION_WEBCONFIG_RES "${HYPERION_WEBCONFIG_RES}\n\t\t<file alias=\"/webconfig/${fname}\">${f}</file>")
+ENDFOREACH()
+CONFIGURE_FILE(${CURRENT_SOURCE_DIR}/WebConfig.qrc.in ${CMAKE_BINARY_DIR}/WebConfig.qrc )
+SET(WebConfig_RESOURCES ${CMAKE_BINARY_DIR}/WebConfig.qrc)
 
 qt5_wrap_cpp(WebConfig_HEADERS_MOC ${WebConfig_QT_HEADERS})
+qt5_add_resources(WebConfig_RESOURCES_RCC ${WebConfig_RESOURCES} ) #OPTIONS "-no-compress"
 
 add_library(webconfig
 	${WebConfig_HEADERS}
 	${WebConfig_QT_HEADERS}
 	${WebConfig_SOURCES}
 	${WebConfig_HEADERS_MOC}
+	${WebConfig_RESOURCES_RCC}
 )
 
 qt5_use_modules(webconfig Network)
