- effects now can use qt image effects - rainbow swirtl is now suitable for any led layout - including matrix

--- a/libsrc/effectengine/CMakeLists.txt
+++ b/libsrc/effectengine/CMakeLists.txt
@@ -48,6 +48,8 @@ add_library(effectengine
 	${EffectEngineSOURCES}
 )
 
+qt5_use_modules(effectengine Core Gui)
+
 target_link_libraries(effectengine
 	hyperion
 	jsoncpp
