--- a/libsrc/effectengine/EffectEngine.qrc.in
+++ b/libsrc/effectengine/EffectEngine.qrc.in
@@ -2,5 +2,6 @@
 	<qresource prefix="/">
 		<file alias="effect-schema">${CURRENT_SOURCE_DIR}/EffectDefinition.schema.json</file>
 		${HYPERION_EFFECTS_RES}
+		${HYPERION_EFFECTS_SCHEMA_RES}
 	</qresource>
 </RCC>
