--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,13 +37,13 @@ endif()
 if ( NOT DEFINED PLATFORM )
 	if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
 		SET( PLATFORM "x86")
-	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" )
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" OR "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "aarch64")
 		SET( PLATFORM "rpi")
 		FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
 		STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
 		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" AND ${CMAKE_SIZEOF_VOID_P} EQUAL 4 )
 			SET( PLATFORM "amlogic" )
-		elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "ODROID-C2") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
+		elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "odroid-c2") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
 			SET( PLATFORM "amlogic64" )
 		endif()
 	endif()
