--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ SET ( DEFAULT_USE_AVAHI_LIBS  ON )
 SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
 SET ( DEFAULT_TESTS      OFF )
 
-IF (__linux__)
+IF (UNIX AND NOT APPLE)
 	SET ( DEFAULT_V4L2   ON  )
 	SET ( DEFAULT_SPIDEV ON )
 	SET ( DEFAULT_FB     ON )
