do more checking on effects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,13 @@ SET( JSON_FILES
 	${HYPERION_SCHEMAS}
 )
 EXECUTE_PROCESS (
-	COMMAND python cmake/checkjson.py ${JSON_FILES}
+	COMMAND python test/checkjson.py ${JSON_FILES}
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_JSON_FAILED
+)
+
+EXECUTE_PROCESS (
+	COMMAND python test/checkeffects.py effects effects/schema
 	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 	RESULT_VARIABLE CHECK_JSON_FAILED
 )
