--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ SET ( HYPERION_VERSION_STABLE OFF )
 SET ( HYPERION_VERSION_MAJOR 2 )
 SET ( HYPERION_VERSION_MINOR 0 )
 SET ( HYPERION_VERSION_PATCH 0 )
+SET ( CURRENT_CONFIG_VERSION 2 )
 
 SET ( DEFAULT_AMLOGIC    OFF )
 SET ( DEFAULT_DISPMANX   OFF )
@@ -139,6 +140,40 @@ message(STATUS "ENABLE_PROFILER = ${ENABLE_PROFILER}")
 
 SET ( PROTOBUF_INSTALL_BIN_DIR ${CMAKE_BINARY_DIR}/proto )
 SET ( PROTOBUF_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/proto )
+
+# check all  json files
+FILE ( GLOB_RECURSE HYPERION_SCHEMAS RELATIVE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/libsrc/*schema*.json )
+SET( JSON_FILES
+	config/hyperion.config.json.default
+	${HYPERION_SCHEMAS}
+)
+EXECUTE_PROCESS (
+	COMMAND python test/jsonchecks/checkjson.py ${JSON_FILES}
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_JSON_FAILED
+)
+IF ( ${CHECK_JSON_FAILED} )
+	MESSAGE (FATAL_ERROR "check of json files failed" )
+ENDIF ()
+
+EXECUTE_PROCESS (
+	COMMAND python test/jsonchecks/checkeffects.py effects effects/schema
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_EFFECTS_FAILED
+)
+IF ( ${CHECK_EFFECTS_FAILED} )
+	MESSAGE (FATAL_ERROR "check of json effect files failed" )
+ENDIF ()
+
+EXECUTE_PROCESS (
+	COMMAND python test/jsonchecks/checkschema.py config/hyperion.config.json.default libsrc/hyperion/schemas/hyperion.schema-${CURRENT_CONFIG_VERSION}.json
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	RESULT_VARIABLE CHECK_CONFIG_FAILED
+)
+IF ( ${CHECK_CONFIG_FAILED} )
+	MESSAGE (FATAL_ERROR "check of json default config failed" )
+ENDIF ()
+
 
 # Createt the configuration file
 
