--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,14 @@ endif ()
 # Add the doxygen generation directory
 add_subdirectory(doc)
 
+# remove generated files on make cleaan too
+LIST( APPEND GENERATED_QRC 
+	${CMAKE_BINARY_DIR}/EffectEngine.qrc
+	${CMAKE_BINARY_DIR}/WebConfig.qrc
+	${CMAKE_BINARY_DIR}/HyperionConfig.h
+)
+set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${GENERATED_QRC}" )
+
 # uninstall target
 configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
 add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
