--- a/libsrc/utils/CMakeLists.txt
+++ b/libsrc/utils/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(Utils_HEADERS
 	${CURRENT_HEADER_DIR}/PixelFormat.h
 	${CURRENT_HEADER_DIR}/VideoMode.h
 	${CURRENT_HEADER_DIR}/ImageResampler.h
+	${CURRENT_HEADER_DIR}/RgbTransform.h
 	${CURRENT_HEADER_DIR}/HsvTransform.h
 	${CURRENT_HEADER_DIR}/HslTransform.h
 	${CURRENT_HEADER_DIR}/RgbChannelTransform.h
@@ -38,6 +39,7 @@ SET(Utils_SOURCES
 	${CURRENT_SOURCE_DIR}/Process.cpp
 	${CURRENT_SOURCE_DIR}/Logger.cpp
 	${CURRENT_SOURCE_DIR}/ImageResampler.cpp
+	${CURRENT_SOURCE_DIR}/RgbTransform.cpp
 	${CURRENT_SOURCE_DIR}/HsvTransform.cpp
 	${CURRENT_SOURCE_DIR}/HslTransform.cpp
 	${CURRENT_SOURCE_DIR}/RgbChannelTransform.cpp
