--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -82,6 +82,7 @@ if(ENABLE_SPIDEV)
 		${CURRENT_SOURCE_DIR}/LedDeviceP9813.h
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.h
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2812SPI.h
+		${CURRENT_SOURCE_DIR}/LedDeviceSk6822SPI.h
 		${CURRENT_SOURCE_DIR}/LedDeviceSk6812SPI.h
 		${CURRENT_SOURCE_DIR}/LedDeviceAPA102.h
 	)
@@ -93,6 +94,7 @@ if(ENABLE_SPIDEV)
 		${CURRENT_SOURCE_DIR}/LedDeviceP9813.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2812SPI.cpp
+		${CURRENT_SOURCE_DIR}/LedDeviceSk6822SPI.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceSk6812SPI.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceAPA102.cpp
 	)
