Add shared libs for odroid

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ elseif ( "${PLATFORM}" STREQUAL "amlogic" )
 elseif ( "${PLATFORM}" STREQUAL "amlogic64" )
 	SET ( DEFAULT_AMLOGIC    ON )
 	SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS ON )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS ON )
 elseif ( "${PLATFORM}" MATCHES "x86" )
 	SET ( DEFAULT_X11        ON )
 	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
