--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
-# Define the main-project name
-project(hyperion)
-
-# define the minimum cmake version (as required by cmake)
 cmake_minimum_required(VERSION 2.8)
+
+PROJECT(hyperion)
 
 IF ( POLICY CMP0026 )
 	CMAKE_POLICY( SET CMP0026 OLD )
@@ -23,8 +21,7 @@ SET ( DEFAULT_DISPMANX   OFF )
 SET ( DEFAULT_OSX        OFF )
 SET ( DEFAULT_X11        OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
-SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
-SET ( DEFAULT_USE_AVAHI_LIBS  ON )
+SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
 SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS OFF )
 SET ( DEFAULT_TESTS      OFF )
 
@@ -73,7 +70,6 @@ if ( "${PLATFORM}" MATCHES "osx" )
 	SET(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5" CACHE STRING "path to your QT5 files" )
 	include_directories("/opt/X11/include/")
 	SET ( DEFAULT_OSX        ON  )
-	SET ( DEFAULT_USE_AVAHI_LIBS OFF )
 elseif ( "${PLATFORM}" STREQUAL "rpi" )
 	SET ( DEFAULT_DISPMANX   ON )
 	SET ( DEFAULT_WS281XPWM  ON )
@@ -81,11 +77,8 @@ elseif ( "${PLATFORM}" STREQUAL "amlogic" )
 	SET ( DEFAULT_AMLOGIC    ON )
 elseif ( "${PLATFORM}" STREQUAL "amlogic64" )
 	SET ( DEFAULT_AMLOGIC    ON )
-	SET ( DEFAULT_USE_SYSTEM_PROTO_LIBS ON )
-	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS ON )
 elseif ( "${PLATFORM}" MATCHES "x86" )
 	SET ( DEFAULT_X11        ON )
-	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
 	if ( "${PLATFORM}" STREQUAL "x86-dev" )
 		SET ( DEFAULT_AMLOGIC    ON)
 		SET ( DEFAULT_WS281XPWM  ON )
