--- a/libsrc/bonjour/CMakeLists.txt
+++ b/libsrc/bonjour/CMakeLists.txt
@@ -3,14 +3,10 @@
 set(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/bonjour)
 set(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/bonjour)
 
-# Group the headers that go through the MOC compiler
-set(Bonjour_QT_HEADERS
-		${CURRENT_HEADER_DIR}/bonjourserviceregister.h
-		${CURRENT_HEADER_DIR}/bonjourservicebrowser.h
-		${CURRENT_HEADER_DIR}/bonjourserviceresolver.h
-)
-
 set(Bonjour_HEADERS
+	${CURRENT_HEADER_DIR}/bonjourserviceregister.h
+	${CURRENT_HEADER_DIR}/bonjourservicebrowser.h
+	${CURRENT_HEADER_DIR}/bonjourserviceresolver.h
 )
 
 set(Bonjour_SOURCES
@@ -22,24 +18,20 @@ set(Bonjour_SOURCES
 #set(Bonjour_RESOURCES
 #)
 
-qt5_wrap_cpp(Bonjour_HEADERS_MOC ${Bonjour_QT_HEADERS})
 #qt5_add_resources(Bonjour_RESOURCES_RCC ${Bonjour_RESOURCES} OPTIONS "-no-compress")
 
 add_library(bonjour
 		${Bonjour_HEADERS}
-		${Bonjour_QT_HEADERS}
 		${Bonjour_SOURCES}
 		${Bonjour_RESOURCES}
-		${Bonjour_HEADERS_MOC}
 		${Bonjour_RESOURCES_RCC}
 )
-
-qt5_use_modules(bonjour Network)
 
 target_link_libraries(bonjour
 		hyperion
 		hyperion-utils
-        ${QT_LIBRARIES})
+		Qt5::Network
+)
 
 IF (NOT APPLE)
 	set(USE_SHARED_AVAHI_LIBS ${DEFAULT_USE_SHARED_AVAHI_LIBS} CACHE BOOL "use avahi libraries from system")
