--- a/libsrc/grabber/amlogic/CMakeLists.txt
+++ b/libsrc/grabber/amlogic/CMakeLists.txt
@@ -4,19 +4,15 @@ INCLUDE (CheckIncludeFiles)
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/grabber)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/grabber/amlogic)
 
-# Group the headers that go through the MOC compiler
-SET(AmlogicQT_HEADERS ${CURRENT_HEADER_DIR}/AmlogicWrapper.h)
-
 SET(AmlogicHEADERS
 	${CURRENT_HEADER_DIR}/AmlogicGrabber.h
+	${CURRENT_HEADER_DIR}/AmlogicWrapper.h
 )
 
 SET(AmlogicSOURCES
 	${CURRENT_SOURCE_DIR}/AmlogicWrapper.cpp
 	${CURRENT_SOURCE_DIR}/AmlogicGrabber.cpp
 )
-
-QT5_WRAP_CPP(AmlogicHEADERS_MOC ${AmlogicQT_HEADERS})
 
 CHECK_INCLUDE_FILES ("amcodec/amports/amstream.h" HAVE_AML_HEADER)
 IF (${HAVE_AML_HEADER})
@@ -26,12 +22,9 @@ ENDIF()
 
 add_library(amlogic-grabber
 	${AmlogicHEADERS}
-	${AmlogicQT_HEADERS}
-	${AmlogicHEADERS_MOC}
 	${AmlogicSOURCES}
 )
 
 target_link_libraries(amlogic-grabber
 	hyperion
 	${QT_LIBRARIES})
-	
