--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -3,17 +3,6 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/hyperion)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/hyperion)
 
-# Group the headers that go through the MOC compiler
-SET(Hyperion_QT_HEADERS
-	${CURRENT_HEADER_DIR}/Hyperion.h
-	${CURRENT_HEADER_DIR}/ImageProcessor.h
-
-	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.h
-	${CURRENT_HEADER_DIR}/GrabberWrapper.h
-	${CURRENT_HEADER_DIR}/ComponentRegister.h
-	${CURRENT_HEADER_DIR}/PriorityMuxer.h
-)
-
 SET(Hyperion_HEADERS
 	${CURRENT_HEADER_DIR}/ImageProcessorFactory.h
 	${CURRENT_HEADER_DIR}/ImageToLedsMap.h
@@ -21,6 +10,14 @@ SET(Hyperion_HEADERS
 
 	${CURRENT_SOURCE_DIR}/MultiColorAdjustment.h
 	${CURRENT_HEADER_DIR}/MessageForwarder.h
+
+	${CURRENT_HEADER_DIR}/Hyperion.h
+	${CURRENT_HEADER_DIR}/ImageProcessor.h
+
+	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.h
+	${CURRENT_HEADER_DIR}/GrabberWrapper.h
+	${CURRENT_HEADER_DIR}/ComponentRegister.h
+	${CURRENT_HEADER_DIR}/PriorityMuxer.h
 )
 
 SET(Hyperion_SOURCES
@@ -42,13 +39,10 @@ SET(Hyperion_RESOURCES
 	${CURRENT_SOURCE_DIR}/resource.qrc
 )
 
-QT5_WRAP_CPP(Hyperion_HEADERS_MOC ${Hyperion_QT_HEADERS})
 QT5_ADD_RESOURCES(Hyperion_RESOURCES_RCC ${Hyperion_RESOURCES} OPTIONS "-no-compress")
 
 add_library(hyperion
 	${Hyperion_HEADERS}
-	${Hyperion_QT_HEADERS}
-	${Hyperion_HEADERS_MOC}
 	${Hyperion_SOURCES}
 	${Hyperion_RESOURCES_RCC}
 )
@@ -58,5 +52,6 @@ target_link_libraries(hyperion
 	hyperion-utils
 	leddevice
 	bonjour
+	effectengine
 	${QT_LIBRARIES}
 )
