--- a/src/hyperion-dispmanx/CMakeLists.txt
+++ b/src/hyperion-dispmanx/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.12)
 project(hyperion-dispmanx)
 
 find_package(Qt5Widgets REQUIRED)
@@ -6,15 +6,12 @@ find_package(BCM REQUIRED)
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}/../../libsrc/protoserver
-	${QT_INCLUDES}
 	${BCM_INCLUDE_DIRS}
 	${PROTOBUF_INCLUDE_DIRS}
 )
 
-set(Hyperion_Dispmanx_QT_HEADERS
-	DispmanxWrapper.h)
-
 set(Hyperion_Dispmanx_HEADERS
+	DispmanxWrapper.h
 )
 
 set(Hyperion_Dispmanx_SOURCES
@@ -22,12 +19,9 @@ set(Hyperion_Dispmanx_SOURCES
 	DispmanxWrapper.cpp
 )
 
-QT5_WRAP_CPP(Hyperion_Dispmanx_HEADERS_MOC ${Hyperion_Dispmanx_QT_HEADERS})
-
 add_executable( ${PROJECT_NAME}
 	${Hyperion_Dispmanx_HEADERS}
 	${Hyperion_Dispmanx_SOURCES}
-	${Hyperion_Dispmanx_HEADERS_MOC}
 )
 
 target_link_libraries( ${PROJECT_NAME}
@@ -39,9 +33,10 @@ target_link_libraries( ${PROJECT_NAME}
 	dispmanx-grabber
 	${Dispmanx_LIBRARIES}
 	pthread
+	Qt5::Core
+	Qt5::Gui
+	Qt5::Network
 )
-
-qt5_use_modules(${PROJECT_NAME} Core Gui Network)
 
 install ( TARGETS ${PROJECT_NAME} DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
 
