--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -1,13 +1,10 @@
 
-SET(Hyperiond_QT_HEADERS
+SET(Hyperiond_HEADERS
 	hyperiond.h
 )
 
-QT5_WRAP_CPP(Hyperiond_HEADERS_MOC ${Hyperiond_QT_HEADERS})
-
-add_executable(hyperiond 
-	${Hyperiond_QT_HEADERS}
-	${Hyperiond_HEADERS_MOC}
+add_executable(hyperiond
+	${Hyperiond_HEADERS}
 	configMigratorBase.cpp
 	configMigratorBase.h
 	configMigrator.cpp
@@ -62,4 +59,3 @@ if(CMAKE_HOST_UNIX)
 	install(FILES ${CMAKE_BINARY_DIR}/symlink_hyperiond DESTINATION "bin" RENAME hyperiond COMPONENT "${PLATFORM}" )
 	install(CODE "FILE (REMOVE ${CMAKE_BINARY_DIR}/symlink_hyperiond )" COMPONENT "${PLATFORM}" )
 endif(CMAKE_HOST_UNIX)
-
