--- a/libsrc/utils/CMakeLists.txt
+++ b/libsrc/utils/CMakeLists.txt
@@ -3,12 +3,6 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/utils)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/utils)
 
-SET(Utils_QT_HEADERS
-	${CURRENT_HEADER_DIR}/Logger.h
-	${CURRENT_HEADER_DIR}/Stats.h
-	${CURRENT_HEADER_DIR}/JsonProcessor.h
-)
-
 SET(Utils_HEADERS
 	${CURRENT_HEADER_DIR}/ColorBgr.h
 	${CURRENT_HEADER_DIR}/ColorRgb.h
@@ -30,6 +24,9 @@ SET(Utils_HEADERS
 	${CURRENT_HEADER_DIR}/jsonschema/QJsonUtils.h
 	${CURRENT_HEADER_DIR}/global_defines.h
 	${CURRENT_HEADER_DIR}/SysInfo.h
+	${CURRENT_HEADER_DIR}/Logger.h
+	${CURRENT_HEADER_DIR}/Stats.h
+	${CURRENT_HEADER_DIR}/JsonProcessor.h
 )
 
 SET(Utils_SOURCES
@@ -56,18 +53,24 @@ if ( ENABLE_PROFILER )
 	SET ( PROFILER_SOURCE ${CURRENT_HEADER_DIR}/Profiler.h ${CURRENT_SOURCE_DIR}/Profiler.cpp )
 endif()
 
-qt5_wrap_cpp(Utils_HEADERS_MOC ${Utils_QT_HEADERS})
+set(Utils_RESOURCES
+	${CURRENT_SOURCE_DIR}/JSONRPC_schemas.qrc
+)
+
+qt5_add_resources(Utils_RESOURCES_RCC ${Utils_RESOURCES} OPTIONS "-no-compress")
 
 
 add_library(hyperion-utils
-	${Utils_QT_HEADERS}
-	${Utils_HEADERS_MOC}
 	${Utils_HEADERS}
 	${Utils_SOURCES}
 	${PROFILER_SOURCE}
+	${Utils_RESOURCES}
+	${Utils_RESOURCES_RCC}
 )
 
-qt5_use_modules(hyperion-utils Core Gui Network)
-
 target_link_libraries(hyperion-utils
-	${QT_LIBRARIES})
+	hyperion
+	Qt5::Core
+	Qt5::Gui
+	Qt5::Network
+)
